Fixed alignment of the dashboard settings items

--- a/app/assets/stylesheets/_containers.css.scss
+++ b/app/assets/stylesheets/_containers.css.scss
@@ -29,7 +29,7 @@
 }
 
 .edit-account-container {
-  padding: 10px 0 0 50px;
+  padding: 10px 0 0 25px;
   font-family: $font;
   font-size: $input-font-size;
 }
